# dynpax

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.example  IMPLEMENTATION_BACKLOG.md  README.md  package-lock.json  package.json  release.config.js
.github/agents/: dynpax-layout-specialist.agent.md  dynpax-release-validator.agent.md  dynpax-runtime-debugger.agent.md
.github/prompts/: dynpax-layout-task.prompt.md  dynpax-release-validate.prompt.md  dynpax-route-task.prompt.md  dynpax-runtime-debug.prompt.md
.github/workflows/: build.yaml  ci.yaml  release-tag.yaml  release.yaml  semantic-release.yaml
cmake/: BundleUtils.cmake  CMakeLists.txt  Dependencies.cmake  FixBundle.cmake.in
src/include/: App.hpp  BundleBuilder.hpp  BundleLayout.hpp  BundleManifest.hpp  BundlePaths.hpp  BundleVerifier.hpp  ELFCache.hpp  Executable.hpp  FakeRoot.hpp  FileManager.hpp  LibraryResolver.hpp  Resolver.hpp  include.hpp
src/include/abstract/: AbstractFileManager.hpp  AbstractLibraryResolver.hpp
src/include/linux/: LinuxLibraryResolver.hpp
src/lib/: App.cpp  BundleBuilder.cpp  BundleLayout.cpp  BundleVerifier.cpp  ELFCache.cpp  Executable.cpp  FakeRoot.cpp  FileManager.cpp  Resolver.cpp
src/lib/linux/: LinuxLibraryResolver.cpp
tests/docker/: README.md  run-matrix.sh
tests/fixtures/: README.md
tests/fixtures/src/hello_glibc/: main.c
tests/fixtures/src/hello_musl/: main.c
tests/fixtures/src/hello_no_interp_so/: no_interp.c
tests/fixtures/src/hello_transitive_glibc/: main.c
tests/fixtures/src/shared/: greet.c  greet.h  message.c  message.h
tests/integration/: BundleVerifierTests.cpp
tests/unit/: ResolverTests.cpp
